--- a/home/templates/base.html
+++ b/home/templates/base.html
@@ -7,6 +7,7 @@
 </head>
     <body>
         <main>
+            Qo`qon mtu 
             {% block content %}
             {% endblock content %}
         </main>
